fixed img stretching and added border radius

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,6 +209,7 @@ nav {
     background-color: rgb(155, 34, 34);
     box-shadow: var(--box-shadow);
     border-radius: 5px;
+    margin-bottom: 10%;
 }
 
 .character img {
@@ -216,7 +217,9 @@ nav {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: auto;
+    border-radius: 5px;
+    /* padding-bottom: 20px; */
 }
 
 .character:after {
